--- a/external/vulkancts/modules/vulkan/CMakeLists.txt
+++ b/external/vulkancts/modules/vulkan/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(multiview)
 add_subdirectory(subgroups)
 add_subdirectory(ycbcr)
 add_subdirectory(protected_memory)
+add_subdirectory(vkrunner)
 
 include_directories(
 	api
@@ -62,6 +63,7 @@ include_directories(
 	subgroups
 	ycbcr
 	protected_memory
+	vkrunner
 	)
 
 set(DEQP_VK_SRCS
@@ -119,6 +121,7 @@ set(DEQP_VK_LIBS
 	deqp-vk-subgroups
 	deqp-vk-ycbcr
 	deqp-vk-protected-memory
+	deqp-vk-vkrunner
 	)
 
 if (DE_COMPILER_IS_MSC AND (DE_PTR_SIZE EQUAL 4))
